[gd_scene load_steps=34 format=2]

[ext_resource path="res://Src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/MenuTitle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Title.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/Dialog9Patch.png" type="Texture" id=4]
[ext_resource path="res://Src/BaseButton/BaseButtonSmall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Menu/Slider/grabber2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/ButtonExtraSpace.tres" type="DynamicFont" id=7]
[ext_resource path="res://Src/Menu/DevLogViewer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/mago2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Src/BaseButton/BaseButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Menu/Slider/grabber.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/Slider/slider.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/Slider/grabber-item.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu/Slider/tick.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menu/Slider/grabber-item-selected.png" type="Texture" id=16]
[ext_resource path="res://Assets/Theme/Dialog9PatchInnerInactive.png" type="Texture" id=17]
[ext_resource path="res://Assets/HUD/Dialog9PatchInner.png" type="Texture" id=18]
[ext_resource path="res://Assets/HUD/TabInActive.png" type="Texture" id=19]
[ext_resource path="res://Assets/HUD/TabActive.png" type="Texture" id=20]
[ext_resource path="res://default_theme.tres" type="Theme" id=21]
[ext_resource path="res://Assets/Menu/CountryFlags.png" type="Texture" id=22]
[ext_resource path="res://Assets/Menu/CountryFlagsHover.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 32, 16 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=4]
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 32, 16 )
margin_left = 7.0
margin_right = 7.0
margin_top = 8.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 12, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 12, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 12, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
modulate = Color( 0.45098, 0.45098, 0.45098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Main"]
anchor_right = 1.0
margin_top = -1.0
margin_bottom = 95.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogWindow" type="ColorRect" parent="Main"]
margin_left = 160.0
margin_top = 104.0
margin_right = 624.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevLogViewer" parent="Main/LogWindow" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_text = "Loading DevLog...
"
text = "Loading DevLog...
"

[node name="LevelSelect" type="OptionButton" parent="Main"]
margin_left = 8.0
margin_top = 24.0
margin_right = 152.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/LevelSelect"]
margin_top = -16.0
margin_right = 96.0
margin_bottom = 8.0
text = "Load Level:"

[node name="DebugButton" type="Button" parent="Main/LevelSelect"]
margin_left = 149.0
margin_top = 1.0
margin_right = 244.0
margin_bottom = 24.0
theme = ExtResource( 21 )
text = "Debug Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 200.0
margin_right = 144.0
margin_bottom = 224.0
text = "MENU_PLAY"

[node name="ButtonLoad" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 232.0
margin_right = 144.0
margin_bottom = 256.0
text = "MENU_LOAD"

[node name="ButtonSettings" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 264.0
margin_right = 144.0
margin_bottom = 288.0
text = "MENU_SETTINGS"

[node name="ButtonExit" parent="Main" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 304.0
margin_right = 144.0
margin_bottom = 328.0
text = "MENU_EXIT"

[node name="LanguageButton" type="TextureButton" parent="Main"]
margin_left = 610.0
margin_top = 16.0
margin_right = 636.0
margin_bottom = 32.0
theme = SubResource( 2 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Main/LanguageButton"]
show_behind_parent = true
texture = ExtResource( 22 )
centered = false
hframes = 3

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="Settings"]
margin_left = 208.0
margin_top = 128.0
margin_right = 432.0
margin_bottom = 328.0
custom_styles/tab_fg = SubResource( 3 )
custom_styles/tab_bg = SubResource( 4 )
custom_styles/panel = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 31.0
margin_right = -6.0
margin_bottom = -6.0

[node name="BrightnessSlider" type="HSlider" parent="Settings/TabContainer/General"]
margin_left = 74.0
margin_top = 41.0
margin_right = 186.0
margin_bottom = 65.0
custom_icons/tick = ExtResource( 15 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = -72.0
margin_right = -6.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_BRIGHTNESS"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = 114.0
margin_right = 138.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"
align = 2
valign = 1

[node name="ContrastSlider" type="HSlider" parent="Settings/TabContainer/General"]
margin_left = 74.0
margin_top = 73.0
margin_right = 186.0
margin_bottom = 97.0
custom_icons/tick = ExtResource( 15 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = -72.0
margin_right = -6.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_CONTRAST"
valign = 1

[node name="Percentage" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = 114.0
margin_right = 138.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonShader" parent="Settings/TabContainer/General" instance=ExtResource( 5 )]
margin_left = 146.0
margin_top = 9.0
margin_right = 210.0
margin_bottom = 33.0
text = "On"

[node name="Label2" type="Label" parent="Settings/TabContainer/General/ButtonShader"]
margin_left = -144.0
margin_right = -65.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
text = "Retro Shader"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" parent="Settings/TabContainer/General" instance=ExtResource( 11 )]
margin_left = 42.0
margin_top = 107.0
margin_right = 170.0
margin_bottom = 131.0
text = "SETTINGS_CREDITS"

[node name="Graphics" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 31.0
margin_right = -6.0
margin_bottom = -6.0

[node name="ButtonVideoApply" parent="Settings/TabContainer/Graphics" instance=ExtResource( 11 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 107.0
margin_right = -42.0
margin_bottom = -34.0
text = "SETTINGS_APPLY"

[node name="ButtonFullscreen" parent="Settings/TabContainer/Graphics" instance=ExtResource( 5 )]
margin_left = 146.0
margin_top = 1.0
margin_right = 210.0
margin_bottom = 25.0
text = "Off"

[node name="Label2" type="Label" parent="Settings/TabContainer/Graphics/ButtonFullscreen"]
margin_left = -144.0
margin_right = -72.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_FULLSCREEN"
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Settings/TabContainer/Graphics"]
margin_left = 2.0
margin_top = 33.0
margin_right = 210.0
margin_bottom = 97.0
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionList" type="ItemList" parent="Settings/TabContainer/Graphics"]
margin_left = 10.0
margin_top = 41.0
margin_right = 202.0
margin_bottom = 89.0
theme = ExtResource( 21 )
custom_styles/bg_focus = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
custom_fonts/font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 31.0
margin_right = -6.0
margin_bottom = -6.0

[node name="SoundSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 50.0
margin_top = 3.0
margin_right = 170.0
margin_bottom = 27.0
custom_icons/tick = ExtResource( 15 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = -48.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_SOUND"
valign = 1

[node name="Percentage" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "100%"
align = 2
valign = 1

[node name="MusicSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 50.0
margin_top = 35.0
margin_right = 170.0
margin_bottom = 59.0
custom_icons/tick = ExtResource( 15 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
max_value = 10.0
value = 5.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = -48.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_MUSIC"
valign = 1

[node name="Percentage" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "100%"
align = 2
valign = 1

[node name="ButtonBack" parent="Settings" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 296.0
margin_right = 384.0
margin_bottom = 320.0
text = "SETTINGS_BACK"

[node name="LoadGame" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="NinePatchRect" parent="LoadGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -12.0
margin_right = 144.0
margin_bottom = 148.0
texture = ExtResource( 4 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="NinePatchRect" parent="LoadGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 21.0
margin_right = 132.0
margin_bottom = 107.0
texture = ExtResource( 18 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLoad1" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 188.0
margin_top = 200.0
margin_right = 316.0
margin_bottom = 224.0
shortcut_in_tooltip = false
text = "Slot 1"

[node name="ButtonLoad2" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 188.0
margin_top = 232.0
margin_right = 316.0
margin_bottom = 256.0
text = "Slot 2"

[node name="ButtonLoad3" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 188.0
margin_top = 264.0
margin_right = 316.0
margin_bottom = 288.0
text = "Slöt 3"

[node name="ButtonBack" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 188.0
margin_top = 296.0
margin_right = 316.0
margin_bottom = 320.0
text = "SETTINGS_BACK"

[node name="ButtonLoad" parent="LoadGame" instance=ExtResource( 11 )]
margin_left = 325.0
margin_top = 296.0
margin_right = 453.0
margin_bottom = 320.0
text = "SETTINGS_LOAD"

[node name="Title" type="Label" parent="LoadGame"]
margin_left = 189.0
margin_top = 179.0
margin_right = 317.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 7 )
text = "SETTINGS_TITLE_LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadData" type="RichTextLabel" parent="LoadGame"]
margin_left = 332.0
margin_top = 205.0
margin_right = 448.0
margin_bottom = 280.0
custom_fonts/normal_font = ExtResource( 9 )
text = "Slot: -

Date: -
Level: -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="NinePatchRect" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -84.0
margin_right = 160.0
margin_bottom = 148.0
texture = ExtResource( 4 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 19.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "The NimbleBeasts Collective is a small and open independent development studio where anyone can participate - worldwide.  Support us, become part of the collective and buy our games. Æ

[color=#ffad3b]mago[/color] - PM, Pixels & Levels
[color=#ffad3b]knightmare[/color] - Coding
[color=#ffad3b]kodkuce[/color] - Levels
[color=#ffad3b]SpaceCastle[/color] - Music & Sounds
[color=#ffad3b]Kukiol[/color] - Illustration"
text = "The NimbleBeasts Collective is a small and open independent development studio where anyone can participate - worldwide.  Support us, become part of the collective and buy our games. Æ

mago - PM, Pixels & Levels
knightmare - Coding
kodkuce - Levels
SpaceCastle - Music & Sounds
Kukiol - Illustration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits/BG"]
margin_left = 8.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "CREDITS_TITLE"

[node name="ButtonBack" parent="Credits" instance=ExtResource( 11 )]
margin_left = 256.0
margin_top = 296.0
margin_right = 384.0
margin_bottom = 320.0
text = "Back"

[node name="Copyright" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]©2021 by NimbleBeasts - [url=https://twitter.com/nimblebeasts][color=#63c2c9]Ç[/color]NimbleBeasts[/url][/center]"
meta_underlined = false
text = "©2021 by NimbleBeasts - ÇNimbleBeasts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_right = -4.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[right]Version[/right]"
text = "Version"

[connection signal="button_up" from="Main/LevelSelect/DebugButton" to="." method="_on_DebugButton_button_up"]
[connection signal="button_up" from="Main/ButtonPlay" to="." method="_on_ButtonPlay_button_up"]
[connection signal="button_up" from="Main/ButtonLoad" to="." method="_on_ButtonLoad_button_up"]
[connection signal="button_up" from="Main/ButtonSettings" to="." method="_on_ButtonSettings_button_up"]
[connection signal="button_up" from="Main/ButtonExit" to="." method="_on_ButtonExit_button_up"]
[connection signal="button_up" from="Main/LanguageButton" to="." method="_on_LanguageButton_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/General/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/General/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]
[connection signal="button_up" from="Settings/TabContainer/General/ButtonShader" to="." method="_on_ButtonShader_button_up"]
[connection signal="button_up" from="Settings/TabContainer/General/ButtonCredits" to="." method="_on_ButtonCredits_button_up"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/ButtonVideoApply" to="." method="_on_ButtonVideoApply_button_up"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/ButtonFullscreen" to="." method="_on_ButtonFullscreen_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="button_up" from="Settings/ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad1" to="." method="_on_ButtonLoad1_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad2" to="." method="_on_ButtonLoad2_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad3" to="." method="_on_ButtonLoad3_button_up"]
[connection signal="button_up" from="LoadGame/ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="LoadGame/ButtonLoad" to="." method="_on_ButtonLoadGame_button_up"]
[connection signal="button_up" from="Credits/ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="meta_clicked" from="Copyright" to="." method="_on_Copyright_meta_clicked"]
